Archive2/d1/4606178c6ddaa3/output
main.cpp:1:6: error: expected constructor, destructor, or type conversion before '(' token
 print("oi")
      ^
